--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ swipelayout = "1.3.1"
 view = "2.8.0"
 viewpager2 = "1.0.0"
 room = "2.7.2"
+playServicesLocation = "21.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +30,7 @@ swipelayout = { module = "com.github.zerobranch:SwipeLayout", version.ref = "swi
 #implementation("androidx.room:room-runtime:$room_version")
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 room-compiler = {module = "androidx.room:room-compiler", version.ref = "room"}
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
